<?xml version="1.0" encoding="utf-8"?>
<!-- WF-01 Splash -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:letterSpacing="0.12"
        android:text="BRICK BREAKER"
        android:textColor="@color/texto"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/subtitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/subtitulo_app"
        android:textColor="@color/texto_secundario"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo" />

    <ProgressBar
        android:id="@+id/barraCarregamento"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:max="100"
        android:progressTint="@color/primario"
        android:progressBackgroundTint="@color/linha"
        app:layout_constraintBottom_toTopOf="@id/carregando"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/carregando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="@string/carregando"
        android:textColor="@color/texto_secundario"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
